# bookinfo-operators

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  tox.ini
.github/workflows/: bookinfo-details-pull-request.yaml  bookinfo-productpage-pull-request.yaml  bookinfo-ratings-pull-request.yaml  bookinfo-reviews-pull-request.yaml  path-filter.yaml  pull-request.yaml
charms/bookinfo-details-k8s/: charmcraft.yaml  pyproject.toml
charms/bookinfo-details-k8s/src/: charm.py
charms/bookinfo-libs-k8s/: README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/bookinfo-productpage-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/bookinfo-ratings-k8s/: charmcraft.yaml  pyproject.toml
charms/bookinfo-ratings-k8s/src/: charm.py
charms/bookinfo-ratings-k8s/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/bookinfo-ratings-k8s/tests/integration/: conftest.py  test_ratings.py
charms/bookinfo-ratings-k8s/tests/unit/: test_charm.py
charms/bookinfo-reviews-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/details-k8s/: charmcraft.yaml  pyproject.toml
charms/productpage-k8s/: charmcraft.yaml  pyproject.toml
charms/ratings-k8s/: charmcraft.yaml  pyproject.toml  tox.ini
charms/reviews-k8s/: charmcraft.yaml  pyproject.toml
scripts/: lock-all.sh  sync-library.sh
terraform/: README.md  applications.tf  integrations.tf  variables.tf
terraform/bookinfo/: README.md  applications.tf  integrations.tf  outputs.tf  variables.tf
tests/integration/: conftest.py  helpers.py  test_bookinfo.py
(+33 files in other folders)
