[project]
name = "bookinfo-ratings-k8s"
version = "0.0"
requires-python = ">=3.8"

dependencies = [
    "ops>=2.10",
    "pydantic",
    "httpx",
    "lightkube"
]

[project.optional-dependencies]
dev = [
    # Formatting
    "ruff",
    "codespell",
    # Unit tests
    "pytest",
    "coverage[toml]",
    "pytest-mock",
    # Integration tests
    "juju>=3.0",
    "pytest-operator",
    "pytest-asyncio",
]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "N805",
]
ignore = ["E501", "D107"]
# ignore N815 in src/models.py because the class variables are defined to match the real kubernetes names.  Otherwise,
# names like "notHosts" would fail the linting check.
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"], "src/models.py" = ["N815"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
ignore-words-list = "assertIn"

[tool.pyright]
extraPaths = ["src", "lib"]
include = ["src/**.py"]